[package]
name = "phoenix"
version = "0.2.2"
authors = [
  "Guillaume Bailleul <laibulle@gmail.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
repository = "https://github.com/laibulle/phoenix-rs"
description = "Rust client for Phoenix channels"
license = "MIT"
readme="README.md"
keywords = ["phoenix-channels", "websocket", "phoenix", "channels"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]

[dependencies]
env_logger = "0.6.0"
log = "0.4.6"
serde_json = "1.0.36"
serde_derive = "1.0.85"
serde = "1.0.85"
tokio-core = "0.1.17"
websocket = "0.22.2"

[badges]
travis-ci = { repository = "laibulle/phoenix-rs" }

[lib]
name = "phoenix"
path = "src/lib.rs"
